--- a/app/styles/sam-icons-with-info.scss
+++ b/app/styles/sam-icons-with-info.scss
@@ -1,3 +1,9 @@
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+  .sam-icons-with-info + .main-container header:first-child {
+    margin-top: 105px;
+  }
+}
 .sam-icons-with-info {
   text-align: center;
   margin-top: 66px;
